Comma fix in home page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://SLFernandes10.github.io/COS60015"
+  "homepage": "https://SLFernandes10.github.io/COS60015",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
